# mats-mech-interp

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  pyproject.toml
experiments/activation-oracles/: main.py
experiments/api-kimi-investigation/: main.py  main_local.py  openrouter_client.py
experiments/auditing-games-llama/: main.py
experiments/checkpoint-diffing/: main.py  task.md
experiments/china-facts-investigation/: README.md  facts_database.py  main.py  openrouter_client.py
experiments/gemini-hidden-pref/: main.py
experiments/hackable-petri-api/: conversation_interface.py  main.py  prompts.py  target_agent.py  task_whistleblowing.md
experiments/hackable-petri-whitebox/: main.py  prompts.py  task_whistleblowing.md  whitebox_conversation_interface.py  whitebox_target_agent.py
experiments/hidden-preference-investigation/: behavioral.py  false_positive_behavioral.py  false_positive_sae.py  main.py  main_behavioral_only.py  main_behavioral_only_subscription.py  main_false_positive_behavioral.py  main_false_positive_sae.py  main_subscription.py  main_v2_behavioral.py  main_v2_sae.py  main_with_sae.py  sae.py  task_prompt.py  whitebox.py
experiments/hidden-preference-investigation/analysis/: lessons-learned.md  methodological-comparison.md  sonnet-vs-opus-sae-comparison.md
experiments/impossiblebench/: main.py  task.md
experiments/interactive-convincing-game/: main.py  task.md
experiments/introspection/: main.py  task.md
experiments/openai-hidden-pref/: main.py
experiments/refusal-direction-ablation/: main.py  task.md
experiments/sandbox-intro/: main.py  task.md
experiments/scoped-sandbox-intro/: helpers.py  interface.py  main.py
experiments/survival-drive-sae/: main.py  task.md
experiments/toolkit/: __init__.py  batch_generate.py  extract_activations.py  research_methodology.md  steering_hook.py
src/harness/: agent.py  interactive.py
src/harness/providers/: adapters.py  (+2 more)
tests/: test_gemini_modal.py  test_gemini_provider.py  test_openai_modal.py
(+46 files in other folders)
